@@ -4,6 +4,10 @@ Revision history for JSON-Schema-Modern
           - evaluate() and evaluate_json_string() can no longer be called with
             a JSON::Schema::Modern::Document object; now you should only pass
             in the desired URI directly (or the raw schema), as before.
+          - fixed some issues when evaluating a schema that had a base URI
+            added to it after the document was created, including selecting
+            the proper base URI to use in error messages when there are
+            multiple choices
 
 0.609     2025-04-20 23:40:09Z
           - validate_schema() (and the json-schema-eval --validate-schema
